# OxiCloud

./: CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.rootless  ISSUE_45_SOLUTION.md  README.md  REPO-DOCUMENTATION.md  TODO-LIST.md  docker-compose.yml
.github/: docker-hub-setup.md
.github/workflows/: docker-build.yml  docker-publish.yml
db/: schema.sql
doc/: CARDDAV-IMPLEMENTATION-PLAN.md  CARDDAV-TECHNICAL-SPEC.md  DATABASE-MIGRATIONS.md  DATABASE-TRANSACTIONS.md  DAV-CLIENT-SETUP.md  DAV-IMPLEMENTATION-PLAN.md  DAV-INTEGRATION.md  FILE-SYSTEM-SAFETY.md  OIDC-ARCHITECTURE.md  OIDC-CONFIG-EXAMPLES.md  OIDC-INTEGRATION.md  POSTGRESQL-BEST-PRACTICES.md  WEBDAV-INTEGRATION-GUIDE.md  WEBDAV-TECHNICAL-SPEC.md
migrations/: 20250408000000_initial_schema.sql  20250408000001_default_users.sql  20250413000000_caldav_schema.sql  20250415000000_carddav_schema.sql
scripts/: reset_admin.sql
src/: main.rs
src/application/: mod.rs
src/application/adapters/: caldav_adapter.rs  mod.rs  webdav_adapter.rs
src/application/dtos/: address_book_dto.rs  calendar_dto.rs  contact_dto.rs  favorites_dto.rs  mod.rs  recent_dto.rs  user_dto.rs
src/application/ports/: auth_ports.rs  calendar_ports.rs  carddav_ports.rs  favorites_ports.rs  inbound.rs  mod.rs  outbound.rs  recent_ports.rs  storage_ports.rs
src/application/services/: auth_application_service.rs  calendar_service.rs  contact_service.rs  favorites_service.rs  file_service.rs  file_upload_service.rs  mod.rs  recent_service.rs  share_service.rs  storage_usage_service.rs  trash_service.rs
src/common/: db.rs  di.rs  errors.rs
src/domain/entities/: calendar.rs  calendar_event.rs  contact.rs  file.rs  mod.rs
static/: index.html
static/css/: favorites.css  fileViewer.css  inlineViewer.css  recent.css  style.css
static/js/: app.js  auth.js  contextMenus.js  favorites.js  fileOperations.js  fileRenderer.js  fileSharing.js  fileViewer.js  i18n.js  inlineViewer.js  languageSelector.js  recent.js  ui.js
static/locales/: en.json  es.json  zh.json
(+42 files in other folders)
