[package]
name = "oxicloud"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.8.3", features = ["multipart", "http1", "tokio", "macros"] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["io", "codec"] }
tokio-stream = { version = "0.1.17", features = ["fs"] }
bytes = "1.10.1"
tempfile = "3.19.1"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "compression-gzip", "trace", "cors", "add-extension", "request-id"] }
flate2 = "1.1.1"
zip = "2.6.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
chrono = { version = "0.4.40", features = ["serde"] }
http-body = "1.0.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures = "0.3.31"
async-stream = "0.3.6"
mime_guess = "2.0.5"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
async-trait = "0.1.88"
thiserror = "2.0.12"
reqwest = { version = "0.12.15", features = ["json", "multipart"] }
mockall = { version = "0.13.1", optional = true }
rand = "0.9.0"
pin-project-lite = "0.2.16"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono", "uuid", "json"] }
anyhow = "1.0.97"
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
rand_core = { version = "0.6.4", features = ["std"] }
time = "0.3.41"
axum-server = "0.7.2"
hyper = { version = "1.6.0", features = ["full"] }
url = "2.5.4"
quick-xml = "0.37.4"
http-body-util = "0.1.3"
openssl = { version = "0.10.72", features = ["vendored"] }
icalendar = "0.16.13"

[features]
default = []
test_utils = ["mockall"]
migrations = ["sqlx/migrate"]

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"
required-features = ["migrations"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true

[profile.bench]
lto = "fat"
codegen-units = 1
opt-level = 3

